# embedded-vcpkg

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: arm-gcc-toolchain.cmake
src/: CMakeLists.txt  memory.ld  startup.s
triplet/: arm-none-eabi.cmake
